7.1_namespace.yaml
cat 7.1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: probes
  labels:
    app: counter
