ServiceAccounts.yml
# Create namespace
kubectl create namespace serviceaccounts
# Set namespace as the default for the current context
kubectl config set-context $(kubectl config current-context) --namespace=serviceaccounts


kubectl get serviceaccounts

kubectl run default-pod --image=mongo:4.0.6
kubectl get pod default-pod -o yaml | more
default account:

kubectl create serviceaccount app-sa

cat << 'EOF' > pod-custom-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-sa-pod 
spec:
  containers:
  - image: mongo:4.0.6
    name: mongodb
  serviceAccount: app-sa
EOF
kubectl create -f pod-custom-sa.yaml

kubectl run default-pod --image=mongo:4.0.6 --serviceaccount=app-sa --dry-run=client -o yaml

kubectl get pod custom-sa-pod -o yaml | more
